--- a/границы.html
+++ b/границы.html
@@ -1,26 +1,25 @@
 </html>
 <head>
-<title>Границы</title>
-<BODY BACKGROUND="вс.jpg">
+<title>Р“СЂР°РЅРёС†С‹</title>
+<BODY BACKGROUND="РІСЃ.jpg">
 </head>
 <body>
 <body text=white>
 <center>
-<p> <font size="7" color="white" face="Arial">Границы космического пространства</font></p>
-<p> <font size="6" color="white" face="Arial">Чёткой границы не существует, атмосфера разрежается постепенно по</font></p>
-<p> <font size="6" color="white" face="Arial">мере удаления от земной поверхности, и до сих пор нет единого мнения,</font></p>
-<p> <font size="6" color="white" face="Arial">что считать фактором начала космоса. Если бы температура была постоянной,</font></p>
-<p> <font size="6" color="white" face="Arial">то давление бы изменялось по экспоненциальному закону от 100 кПа на уровне</font></P>
-<p> <font size="6" color="white" face="Arial">моря до нуля. Международная авиационная федерация в качестве рабочей границы</font></p> 
-<p> <font size="6" color="white" face="Arial">между атмосферой и космосом установила высоту в 100 км (линия Кармана), потому</font></P>
-<p> <font size="6" color="white" face="Arial">что на этой высоте для создания подъёмной аэродинамической силы необходимо,</font></p>
-<p> <font size="6" color="white" face="Arial">чтобы летательный аппарат двигался с первой космической скоростью, из-за чего</font></p>
-<p> <font size="6" color="white" face="Arial">теряется смысл авиаполёта.</font></p>
-<p> <font size="6" color="white" face="Arial">Астрономы из США и Канады измерили границу влияния атмосферных ветров и начала</font></p>
-<p> <font size="6" color="white" face="Arial">воздействия космических частиц. Она оказалась на высоте 118 километров, хотя сами</font></p>
-<p> <font size="6" color="white" face="Arial">NASA считают границей космоса 122 км. На такой высоте шаттлы переключались с обычного</font></p>
-<p> <font size="6" color="white" face="Arial">маневрирования с использованием только ракетных двигателей на аэродинамическое с </font></p>
-<p> <font size="6" color="white" face="Arial">«опорой» на атмосферу.</font></p>
+<p>Р§С‘С‚РєРѕР№ РіСЂР°РЅРёС†С‹ РЅРµ СЃСѓС‰РµСЃС‚РІСѓРµС‚, Р°С‚РјРѕСЃС„РµСЂР° СЂР°Р·СЂРµР¶Р°РµС‚СЃСЏ РїРѕСЃС‚РµРїРµРЅРЅРѕ РїРѕ</p>
+<p>РјРµСЂРµ СѓРґР°Р»РµРЅРёСЏ РѕС‚ Р·РµРјРЅРѕР№ РїРѕРІРµСЂС…РЅРѕСЃС‚Рё, Рё РґРѕ СЃРёС… РїРѕСЂ РЅРµС‚ РµРґРёРЅРѕРіРѕ РјРЅРµРЅРёСЏ,</p>
+<p>С‡С‚Рѕ СЃС‡РёС‚Р°С‚СЊ С„Р°РєС‚РѕСЂРѕРј РЅР°С‡Р°Р»Р° РєРѕСЃРјРѕСЃР°. Р•СЃР»Рё Р±С‹ С‚РµРјРїРµСЂР°С‚СѓСЂР° Р±С‹Р»Р° РїРѕСЃС‚РѕСЏРЅРЅРѕР№,</p>
+<P>С‚Рѕ РґР°РІР»РµРЅРёРµ Р±С‹ РёР·РјРµРЅСЏР»РѕСЃСЊ РїРѕ СЌРєСЃРїРѕРЅРµРЅС†РёР°Р»СЊРЅРѕРјСѓ Р·Р°РєРѕРЅСѓ РѕС‚ 100 РєРџР° РЅР° СѓСЂРѕРІРЅРµ</P>
+<P>РјРѕСЂСЏ РґРѕ РЅСѓР»СЏ. РњРµР¶РґСѓРЅР°СЂРѕРґРЅР°СЏ Р°РІРёР°С†РёРѕРЅРЅР°СЏ С„РµРґРµСЂР°С†РёСЏ РІ РєР°С‡РµСЃС‚РІРµ СЂР°Р±РѕС‡РµР№ РіСЂР°РЅРёС†С‹</p> 
+<P>РјРµР¶РґСѓ Р°С‚РјРѕСЃС„РµСЂРѕР№ Рё РєРѕСЃРјРѕСЃРѕРј СѓСЃС‚Р°РЅРѕРІРёР»Р° РІС‹СЃРѕС‚Сѓ РІ 100 РєРј (Р»РёРЅРёСЏ РљР°СЂРјР°РЅР°), РїРѕС‚РѕРјСѓ</P>
+<P>С‡С‚Рѕ РЅР° СЌС‚РѕР№ РІС‹СЃРѕС‚Рµ РґР»СЏ СЃРѕР·РґР°РЅРёСЏ РїРѕРґСЉС‘РјРЅРѕР№ Р°СЌСЂРѕРґРёРЅР°РјРёС‡РµСЃРєРѕР№ СЃРёР»С‹ РЅРµРѕР±С…РѕРґРёРјРѕ,</p>
+<p>С‡С‚РѕР±С‹ Р»РµС‚Р°С‚РµР»СЊРЅС‹Р№ Р°РїРїР°СЂР°С‚ РґРІРёРіР°Р»СЃСЏ СЃ РїРµСЂРІРѕР№ РєРѕСЃРјРёС‡РµСЃРєРѕР№ СЃРєРѕСЂРѕСЃС‚СЊСЋ, РёР·-Р·Р° С‡РµРіРѕ</p>
+<p>С‚РµСЂСЏРµС‚СЃСЏ СЃРјС‹СЃР» Р°РІРёР°РїРѕР»С‘С‚Р°.</p>
+<p>РђСЃС‚СЂРѕРЅРѕРјС‹ РёР· РЎРЁРђ Рё РљР°РЅР°РґС‹ РёР·РјРµСЂРёР»Рё РіСЂР°РЅРёС†Сѓ РІР»РёСЏРЅРёСЏ Р°С‚РјРѕСЃС„РµСЂРЅС‹С… РІРµС‚СЂРѕРІ Рё РЅР°С‡Р°Р»Р°</p>
+<p>РІРѕР·РґРµР№СЃС‚РІРёСЏ РєРѕСЃРјРёС‡РµСЃРєРёС… С‡Р°СЃС‚РёС†. РћРЅР° РѕРєР°Р·Р°Р»Р°СЃСЊ РЅР° РІС‹СЃРѕС‚Рµ 118 РєРёР»РѕРјРµС‚СЂРѕРІ, С…РѕС‚СЏ СЃР°РјРё</p>
+<p>NASA СЃС‡РёС‚Р°СЋС‚ РіСЂР°РЅРёС†РµР№ РєРѕСЃРјРѕСЃР° 122 РєРј. РќР° С‚Р°РєРѕР№ РІС‹СЃРѕС‚Рµ С€Р°С‚С‚Р»С‹ РїРµСЂРµРєР»СЋС‡Р°Р»РёСЃСЊ СЃ РѕР±С‹С‡РЅРѕРіРѕ</p>
+<p>РјР°РЅРµРІСЂРёСЂРѕРІР°РЅРёСЏ СЃ РёСЃРїРѕР»СЊР·РѕРІР°РЅРёРµРј С‚РѕР»СЊРєРѕ СЂР°РєРµС‚РЅС‹С… РґРІРёРіР°С‚РµР»РµР№ РЅР° Р°СЌСЂРѕРґРёРЅР°РјРёС‡РµСЃРєРѕРµ СЃ </p>
+<p>В«РѕРїРѕСЂРѕР№В» РЅР° Р°С‚РјРѕСЃС„РµСЂСѓ.</p>
 </center>
 </body>
 </html>
