--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <!-- разделение на две строки -->
   <frame src="head.htm" scrolling="no" >
    <frameset cols="243, *">  <!-- вторая строка разделяется на два столбца -->
-     <frame src="Menu.htm" scrolling="no" >
+     <frame src="Menu.html" scrolling="no" >
       <frame src="этимология.html" name='inf'>
    </frameset>
  </frameset>"      </html>
