fix: solve encoding problem

--- a/освоение космоса.html
+++ b/освоение космоса.html
@@ -1,30 +1,29 @@
 <html>
 <head>
-<title> ?????? </title>
+<title> РћСЃРІРѕРµРЅРёРµ РєРѕСЃРјРѕСЃР° </title>
 <BODY BACKGROUND="kosmos.jpg">
 </head>
 <body>
 <body text=white>
 <body link=blue>
 <center>
-<p> <font size="7" color="white" face="Arial">Освоение космоса —</font></p>
-<p> <font size="6" color="white" face="Arial"> изучение и освоение (обживание, промышленное использование) человеком </font></p>
-<p> <font size="6" color="white" face="Arial"> космического пространства и небесных тел с помощью космических аппаратов. Исследования космоса ведутся</font></p>
-<p> <font size="6" color="white" face="Arial"> как с помощью пилотируемых космических полётов, так и с помощью автоматических космических аппаратов.</font></p>
-<p> <font size="6" color="white" face="Arial">изучение и освоение (обживание, промышленное использование) человеком космического пространства и небесных</font></p>
-<p> <font size="6" color="white" face="Arial"> тел с помощью космических аппаратов. Исследования космоса ведутся как с помощью пилотируемых космических</font></p>
-<p> <font size="6" color="white" face="Arial">полётов, так и с помощью автоматических космических аппаратов.</font><p>
-<p> <font size="7" color="white" face="Arial">Полёты человека в космос</font></p>
-<li><p> <font size="6" color="white" face="Arial"> 12 апреля 1961 года — совершён первый полёт человека в космос (Юрий Гагарин) на корабле Восток-1.</font></p>
-<li><p> <font size="6" color="white" face="Arial">12 августа 1962 года — совершён первый в мире групповой космический полёт на кораблях Восток-3 и Восток-4. </font></p></li>
-<p> <font size="6" color="white" face="Arial"> Максимальное сближение кораблей составило около 6.5 км.</font></P></li>
-<li><p> <font size="6" color="white" face="Arial"> 16 июня 1963 года — совершён первый в мире полёт в космос женщины-космонавта (Валентина Терешкова)</font></P>
-<p> <font size="6" color="white" face="Arial">  на космическом корабле Восток-6.</font></p>
+<p> <h1>РћСЃРІРѕРµРЅРёРµ РєРѕСЃРјРѕСЃР° вЂ”</h1> РёР·СѓС‡РµРЅРёРµ Рё РѕСЃРІРѕРµРЅРёРµ (РѕР±Р¶РёРІР°РЅРёРµ, РїСЂРѕРјС‹С€Р»РµРЅРЅРѕРµ РёСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ) С‡РµР»РѕРІРµРєРѕРј </p>
+<p> РєРѕСЃРјРёС‡РµСЃРєРѕРіРѕ РїСЂРѕСЃС‚СЂР°РЅСЃС‚РІР° Рё РЅРµР±РµСЃРЅС‹С… С‚РµР» СЃ РїРѕРјРѕС‰СЊСЋ РєРѕСЃРјРёС‡РµСЃРєРёС… Р°РїРїР°СЂР°С‚РѕРІ. РСЃСЃР»РµРґРѕРІР°РЅРёСЏ РєРѕСЃРјРѕСЃР° РІРµРґСѓС‚СЃСЏ</p>
+<p> РєР°Рє СЃ РїРѕРјРѕС‰СЊСЋ РїРёР»РѕС‚РёСЂСѓРµРјС‹С… РєРѕСЃРјРёС‡РµСЃРєРёС… РїРѕР»С‘С‚РѕРІ, С‚Р°Рє Рё СЃ РїРѕРјРѕС‰СЊСЋ Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРёС… РєРѕСЃРјРёС‡РµСЃРєРёС… Р°РїРїР°СЂР°С‚РѕРІ.</p>
+<p>РёР·СѓС‡РµРЅРёРµ Рё РѕСЃРІРѕРµРЅРёРµ (РѕР±Р¶РёРІР°РЅРёРµ, РїСЂРѕРјС‹С€Р»РµРЅРЅРѕРµ РёСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ) С‡РµР»РѕРІРµРєРѕРј РєРѕСЃРјРёС‡РµСЃРєРѕРіРѕ РїСЂРѕСЃС‚СЂР°РЅСЃС‚РІР° Рё РЅРµР±РµСЃРЅС‹С…</p>
+<p> С‚РµР» СЃ РїРѕРјРѕС‰СЊСЋ РєРѕСЃРјРёС‡РµСЃРєРёС… Р°РїРїР°СЂР°С‚РѕРІ. РСЃСЃР»РµРґРѕРІР°РЅРёСЏ РєРѕСЃРјРѕСЃР° РІРµРґСѓС‚СЃСЏ РєР°Рє СЃ РїРѕРјРѕС‰СЊСЋ РїРёР»РѕС‚РёСЂСѓРµРјС‹С… РєРѕСЃРјРёС‡РµСЃРєРёС…</p>
+<p> РїРѕР»С‘С‚РѕРІ, С‚Р°Рє Рё СЃ РїРѕРјРѕС‰СЊСЋ Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРёС… РєРѕСЃРјРёС‡РµСЃРєРёС… Р°РїРїР°СЂР°С‚РѕРІ.<p>
+<p> <h1>РџРѕР»С‘С‚С‹ С‡РµР»РѕРІРµРєР° РІ РєРѕСЃРјРѕСЃ</h1> </p>
+<li>12 Р°РїСЂРµР»СЏ 1961 РіРѕРґР° вЂ” СЃРѕРІРµСЂС€С‘РЅ РїРµСЂРІС‹Р№ РїРѕР»С‘С‚ С‡РµР»РѕРІРµРєР° РІ РєРѕСЃРјРѕСЃ (Р®СЂРёР№ Р“Р°РіР°СЂРёРЅ) РЅР° РєРѕСЂР°Р±Р»Рµ Р’РѕСЃС‚РѕРє-1.</p>
+<li><p>12 Р°РІРіСѓСЃС‚Р° 1962 РіРѕРґР° вЂ” СЃРѕРІРµСЂС€С‘РЅ РїРµСЂРІС‹Р№ РІ РјРёСЂРµ РіСЂСѓРїРїРѕРІРѕР№ РєРѕСЃРјРёС‡РµСЃРєРёР№ РїРѕР»С‘С‚ РЅР° РєРѕСЂР°Р±Р»СЏС… Р’РѕСЃС‚РѕРє-3 Рё Р’РѕСЃС‚РѕРє-4. </p></li>
+<p>РњР°РєСЃРёРјР°Р»СЊРЅРѕРµ СЃР±Р»РёР¶РµРЅРёРµ РєРѕСЂР°Р±Р»РµР№ СЃРѕСЃС‚Р°РІРёР»Рѕ РѕРєРѕР»Рѕ 6.5 РєРј.</P></li>
+<li><p>16 РёСЋРЅСЏ 1963 РіРѕРґР° вЂ” СЃРѕРІРµСЂС€С‘РЅ РїРµСЂРІС‹Р№ РІ РјРёСЂРµ РїРѕР»С‘С‚ РІ РєРѕСЃРјРѕСЃ Р¶РµРЅС‰РёРЅС‹-РєРѕСЃРјРѕРЅР°РІС‚Р° (Р’Р°Р»РµРЅС‚РёРЅР° РўРµСЂРµС€РєРѕРІР°)</P>
+<p> РЅР° РєРѕСЃРјРёС‡РµСЃРєРѕРј РєРѕСЂР°Р±Р»Рµ Р’РѕСЃС‚РѕРє-6.</p>
 </li>
-<li><p> <font size="6" color="white" face="Arial"> 12 октября 1964 года — совершил полёт первый в мире многоместный космический корабль Восход-1.
-</font></p></li>
-<li><p> <font size="6" color="white" face="Arial">18 марта 1965 года — совершён первый в истории выход человека в открытый космос. Космонавт Алексей</font></p>
-<p> <font size="6" color="white" face="Arial">Леонов совершил выход в открытый космос из корабля Восход-2.</font></p></li>
+<li>12 РѕРєС‚СЏР±СЂСЏ 1964 РіРѕРґР° вЂ” СЃРѕРІРµСЂС€РёР» РїРѕР»С‘С‚ РїРµСЂРІС‹Р№ РІ РјРёСЂРµ РјРЅРѕРіРѕРјРµСЃС‚РЅС‹Р№ РєРѕСЃРјРёС‡РµСЃРєРёР№ РєРѕСЂР°Р±Р»СЊ Р’РѕСЃС…РѕРґ-1.
+</li>
+<li><p>18 РјР°СЂС‚Р° 1965 РіРѕРґР° вЂ” СЃРѕРІРµСЂС€С‘РЅ РїРµСЂРІС‹Р№ РІ РёСЃС‚РѕСЂРёРё РІС‹С…РѕРґ С‡РµР»РѕРІРµРєР° РІ РѕС‚РєСЂС‹С‚С‹Р№ РєРѕСЃРјРѕСЃ. РљРѕСЃРјРѕРЅР°РІС‚ РђР»РµРєСЃРµР№</p>
+ <p>Р›РµРѕРЅРѕРІ СЃРѕРІРµСЂС€РёР» РІС‹С…РѕРґ РІ РѕС‚РєСЂС‹С‚С‹Р№ РєРѕСЃРјРѕСЃ РёР· РєРѕСЂР°Р±Р»СЏ Р’РѕСЃС…РѕРґ-2.</p></li>
 </center>
 </body>
 </html>
